--- a/TellMe_Mobile.Mobile/TellMe.iOS/Auth.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Auth.storyboard
@@ -26,7 +26,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="467" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1917" y="-657"/>
+            <point key="canvasLocation" x="-2246" y="-656"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="17009">
@@ -199,7 +199,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="17049" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-854" y="-441"/>
+            <point key="canvasLocation" x="-1237" y="-474"/>
         </scene>
         <!--Import Contacts-->
         <scene sceneID="19179">
@@ -368,7 +368,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="28291" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1395" y="-659"/>
+            <point key="canvasLocation" x="-1743" y="-661"/>
         </scene>
         <scene sceneID="29739">
             <objects>
@@ -465,12 +465,107 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="29797" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-867" y="-1195"/>
+            <point key="canvasLocation" x="-1229" y="-1289"/>
+        </scene>
+        <scene sceneID="46286">
+            <objects>
+                <viewController id="46287" customClass="UploadPictureController" sceneMemberID="viewController" storyboardIdentifier="UploadPictureController" useStoryboardIdentifierAsRestorationIdentifier="YES">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="46342"/>
+                        <viewControllerLayoutGuide type="bottom" id="46345"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="46305">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a picture for your account" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46306">
+                                <rect key="frame" x="20" y="20" width="335" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <constraints>
+                                    <constraint id="46307" firstItem="46306" firstAttribute="height" constant="24"/>
+                                </constraints>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48562" enabled="NO">
+                                <rect key="frame" x="87.5" y="410" width="200" height="44"/>
+                                <color key="backgroundColor" customColorSpace="sRGB" colorSpace="calibratedRGB" red="0.90196078431372551" green="0.90196078431372551" blue="0.89803921568627454" alpha="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="48565"/>
+                                    <constraint firstAttribute="height" constant="44" id="48566"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Continue">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="ContinueButton_TouchUpInside:" destination="48564" id="48563" eventType="touchUpInside"/>
+                                    <action selector="ContinueButton_TouchUpInside:" destination="46287" id="50295" eventType="touchUpInside"/>
+                                </connections>
+                                <state key="disabled" title="Continue"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="50024" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" customClass="Picture" image="UserPic">
+                                <rect key="frame" x="75" y="52" width="225" height="225"/>
+                                <constraints>
+                                    <constraint id="50169" firstAttribute="width" secondItem="50024" secondAttribute="height" multiplier="1:1"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                        <real key="value" value="112"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="50412" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="88" y="462" width="200" height="30"/>
+                                <state key="normal" title="Skip">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="SkipButton_TouchUpInside:" destination="46287" id="50535" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint id="48596" firstItem="48562" firstAttribute="centerX" secondItem="46305" secondAttribute="centerX"/>
+                            <constraint id="50168" firstItem="50024" firstAttribute="centerX" secondItem="46305" secondAttribute="centerX"/>
+                            <constraint id="50170" firstItem="50024" firstAttribute="width" secondItem="46305" secondAttribute="width" multiplier="0.6"/>
+                            <constraint id="50172" firstItem="46306" firstAttribute="top" secondItem="46305" secondAttribute="top" constant="20"/>
+                            <constraint id="50175" firstItem="46306" firstAttribute="centerX" secondItem="46305" secondAttribute="centerX"/>
+                            <constraint id="50176" firstItem="46306" firstAttribute="width" secondItem="46305" secondAttribute="width" constant="-40"/>
+                            <constraint id="50177" firstItem="50024" firstAttribute="top" secondItem="46306" secondAttribute="bottom" constant="8"/>
+                            <constraint id="50178" firstItem="48562" firstAttribute="top" secondItem="50024" secondAttribute="bottom" constant="133" priority="900"/>
+                            <constraint id="50179" firstItem="48562" firstAttribute="top" secondItem="50024" secondAttribute="bottom" constant="20" relation="greaterThanOrEqual"/>
+                            <constraint id="50294" firstItem="46305" firstAttribute="bottom" secondItem="48562" secondAttribute="bottom" constant="58" relation="greaterThanOrEqual"/>
+                            <constraint id="50413" firstItem="50412" firstAttribute="width" secondItem="48562" secondAttribute="width"/>
+                            <constraint id="50414" firstItem="50412" firstAttribute="centerX" secondItem="48562" secondAttribute="centerX"/>
+                            <constraint id="50415" firstItem="50412" firstAttribute="top" secondItem="48562" secondAttribute="bottom" constant="8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Upload a Picture" id="46304"/>
+                    <connections>
+                        <outlet property="Picture" destination="50024" id="name-outlet-50024"/>
+                        <outlet property="ContinueButton" destination="48562" id="name-outlet-48562"/>
+                        <outlet property="SkipButton" destination="50412" id="name-outlet-50412"/>
+                    </connections>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="46346" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-846" y="-474"/>
         </scene>
     </scenes>
     <resources>
         <image name="Contacts" width="192" height="192"/>
         <image name="Play" width="64" height="64"/>
+        <image name="Account" width="25" height="25"/>
+        <image name="UserPic" width="36" height="36"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedScreenMetrics key="destination" type="retina47"/>
