--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -23,8 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="Profile View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="83" y="313" width="210" height="42"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Profile View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
+                                <rect key="frame" x="93" y="313" width="190" height="42"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -43,6 +43,18 @@
                                     <action selector="SignOutButton_TouchUpInside:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="314"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="21014" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="88" y="263" width="200" height="30"/>
+                                <state key="normal" title="Change Picture">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <constraints>
+                                    <constraint id="21282" firstItem="21014" firstAttribute="width" constant="200"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="ChangePictureButton_TouchUpInside:" destination="8rJ-Kc-sve" id="21348" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -50,11 +62,14 @@
                             <constraint firstItem="275" firstAttribute="centerY" secondItem="QS5-Rx-YEW" secondAttribute="centerY" constant="69" id="285"/>
                             <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
                             <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint id="21249" firstItem="21014" firstAttribute="centerX" secondItem="QS5-Rx-YEW" secondAttribute="centerX"/>
+                            <constraint id="21250" firstItem="zEq-FU-wV5" firstAttribute="top" secondItem="21014" secondAttribute="bottom" constant="20"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="Second" id="cPa-gy-q4n"/>
                     <connections>
                         <outlet property="SignOutButton" destination="275" id="name-outlet-275"/>
+                        <outlet property="ChangePictureButton" destination="21014" id="name-outlet-21014"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
