--- a/TellMe_Mobile.Mobile/TellMe.iOS/Controllers/EventsViewController.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Controllers/EventsViewController.xib
@@ -11,19 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EventsViewController">
             <connections>
+                <outlet property="ActivityIndicator" destination="32071" id="orT-TW-7CC"/>
                 <outlet property="TableView" destination="l1b-oO-baM" id="8jP-tV-xfP"/>
                 <outlet property="View" destination="l1b-oO-baM" id="N3q-AV-Hsl"/>
-				<outlet property="ActivityIndicator" destination="32071" id="name-outlet-32071"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" id="l1b-oO-baM">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <point key="canvasLocation" x="12" y="-7"/>
-			<view key="tableFooterView" contentMode="scaleToFill" id="31708">
-                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+            <color key="backgroundColor" colorSpace="calibratedRGB" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1"/>
+            <view key="tableFooterView" contentMode="scaleToFill" id="31708">
+                <rect key="frame" x="0.0" y="666" width="375" height="44"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="32071">
@@ -36,6 +35,10 @@
                     <constraint firstItem="32071" firstAttribute="centerY" secondItem="31708" secondAttribute="centerY" id="32073"/>
                 </constraints>
             </view>
+            <point key="canvasLocation" x="12" y="-7"/>
         </tableView>
     </objects>
+    <resources>
+        <image name="Account" width="25" height="25"/>
+    </resources>
 </document>
